Bug 223310 use nsIObserver rather than nsIDOMWindowInternal in nsIKeygenThread. r=jgmyers sr=darin